added required libraries in requirements text

--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -5,12 +5,14 @@ uvicorn
 # Database
 SQLAlchemy
 asyncmy
+sqlalchemy
 
 # For generating models from DB (optional dev tool)
 sqlacodegen
 
 # Environment variables
 python-dotenv
+python-multipart
 
 # For data validation and schema management
 pydantic
