--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -34,3 +34,86 @@ pandas
 requests
 PyJWT[crypto]
 openpyxl
+
+absl-py==2.2.2
+aioboto3==15.5.0
+aiobotocore==2.25.1
+aiofiles==25.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aioitertools==0.13.0
+aiosignal==1.4.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.0
+async-timeout==5.0.1
+asyncmy==0.2.10
+attrs==25.3.0
+boto3==1.40.61
+botocore==1.40.61
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+contourpy==1.3.2
+cryptography==46.0.3
+cycler==0.12.1
+dnspython==2.8.0
+email-validator==2.3.0
+exceptiongroup==1.3.1
+fastapi==0.124.0
+flatbuffers==25.2.10
+fonttools==4.57.0
+frozenlist==1.8.0
+greenlet==3.3.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+inflect==7.5.0
+jax==0.6.0
+jaxlib==0.6.0
+jmespath==1.0.1
+kiwisolver==1.4.8
+matplotlib==3.10.1
+ml_dtypes==0.5.1
+more-itertools==10.8.0
+multidict==6.7.0
+numpy==1.26.4
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
+opt_einsum==3.4.0
+packaging==25.0
+pandas==2.3.3
+phonenumbers==9.0.20
+pillow==11.2.1
+propcache==0.4.1
+protobuf==4.25.7
+pycountry==24.6.1
+pycparser==2.22
+pydantic==2.12.5
+pydantic_core==2.41.5
+PyJWT==2.10.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-multipart==0.0.20
+pytz==2025.2
+requests==2.32.5
+s3transfer==0.14.0
+scipy==1.15.2
+sentencepiece==0.2.0
+six==1.17.0
+sounddevice==0.5.1
+sqlacodegen==3.2.0
+SQLAlchemy==2.0.44
+starlette==0.50.0
+typeguard==4.4.4
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.6.1
+uvicorn==0.38.0
+wrapt==1.17.3
+yarl==1.22.0
